...
            "state": "translated",
            "value": "设置"
          }
        }
      }
    },
    "Choose Language": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Choose Language"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "选择语言"
          }
        }
      },
      "extractionState": "manual"
    },
    "Searching Range": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Searching Range"
          }
...
            "state": "translated",
            "value": "收藏点位"
          }
        }
      }
    },
    "Share": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Share"
          }
...
            "state": "translated",
            "value": "好"
          }
        }
      }
    },
    "Voice search": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Voice search"
          }
...
    "Apple Maps": {
      "extractionState": "manual",
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "Apple 地图"
          }
        }
      }
    },
    "Distance in meters": {
      "extractionState": "manual",
...
            "state": "translated",
            "value": "暂时无法获取位置。你可以重试，或浏览地图中心附近。"
          }
        }
      }
    },
    "Could not open place link": {
      "extractionState": "manual",
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "无法打开点位链接"
...
